# building-mcp-servers

./: .gitignore  LICENSE  LICENSE-CC-BY-4.0.txt  README.md  pyproject.toml
.aitk/: mcp.json
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreate.sh
docs/: 1.tools.md  2.resources.md  3.prompts.md  README.md
inspector/: config.json  package.json
src/: client.py  server.py
