[project]
name = "mcp_demo"
version = "0.1.0"
description = "A simple demonstration MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.35.0",
    "fastmcp>=2.11.2",
    "mcp>=1.10.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = ["debugpy>=1.8.8"]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
]
